# compere

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  frontend.yml  publish.yml
compere/: __init__.py  cli.py  main.py
compere-ui/: .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
compere-ui/src/: App.vue  main.js  router.js
compere-ui/src/assets/: app.css
compere-ui/src/components/: ConnectionStatus.vue  EntityComparisonCard.vue  Navigation.vue  NavigationItem.vue  StatsCard.vue  StatusItem.vue  UserMenu.vue
compere-ui/src/services/: api.js
compere-ui/src/stores/: auth.js  comparisons.js  entities.js
compere-ui/src/utils/: simulation.js
compere-ui/src/views/: Analytics.vue  Auth.vue  Comparison.vue  Dashboard.vue  EntityManager.vue  Leaderboard.vue  Simulations.vue
compere/modules/: __init__.py  auth.py  comparison.py  config.py  database.py  entity.py  errors.py  mab.py  middleware.py  models.py  rating.py  security.py  similarity.py  user.py
docs/: algorithms.md  api-reference.md  configuration.md  getting-started.md  library-usage.md
documentation/: mkdocs.yml
documentation/docs/: faq.md  index.md  security.md
documentation/docs/concepts/: elo-rating.md  entity-pairing.md  index.md  mab-algorithm.md
documentation/docs/deployment/: docker.md  index.md  production.md  troubleshooting.md
documentation/docs/development/: architecture.md  contributing.md  index.md  testing.md
documentation/docs/getting-started/: first-comparison.md  index.md  installation.md  quickstart.md
documentation/docs/user-guide/: api-reference.md  configuration.md  index.md  library-usage.md
examples/: complete_example.py
tests/: conftest.py  test_api.py  test_auth.py  test_cli.py  test_comparison.py  test_compere.py  test_config.py  test_entity.py  test_middleware.py
