[project]
name = "compere"
version = "0.1.0"
description = "An advanced comparative rating system that leverages Multi-Armed Bandit (MAB) algorithms and Elo ratings to provide fair and efficient entity comparisons."
authors = [
    { name = "Dipankar Sarkar", email = "me@dipankar.name" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.68.0",
    "sqlalchemy>=1.4.0",
    "python-jose>=3.3.0",
    "PyJWT>=2.3.0",
    "passlib>=1.7.4",
    "python-dotenv>=0.18.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "uvicorn>=0.15.0",
    "click>=8.0.0",
]

[project.scripts]
compere = "compere.cli:main"

[dependency-groups]
dev = [
    "pytest>=6.2.4",
    "pytest-cov>=2.12.1",
    "httpx>=0.18.0",
    "ruff>=0.8.0",
    "twine>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["compere"]
