[project]
name = "compere"
version = "0.1.0"
description = "An advanced comparative rating system that leverages Multi-Armed Bandit (MAB) algorithms and Elo ratings to provide fair and efficient entity comparisons."
authors = [{ name = "Dipankar Sarkar", email = "me@dipankar.name" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.68.0",
    "sqlalchemy>=1.4.0",
    "python-jose>=3.3.0",
    "PyJWT>=2.3.0",
    "passlib>=1.7.4",
    "python-dotenv>=0.18.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "uvicorn>=0.15.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
    "pytest-cov>=2.12.1",
    "httpx>=0.18.0",
    "ruff>=0.8.0",
]

[project.scripts]
compere = "compere.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["compere"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["compere"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
